Add Forge sources roots at run config resolve, fixes 1.16.5 IDE runs